fix: adjust gap for newsletter layout on larger screens

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1765,6 +1765,7 @@ input { background-color: #EEEEEE; border: none; padding: 12px 15px; margin: 8px
     .p-details .slick-prev{ top: 0; bottom: 0; left: 25px;}
     .p-details .slick-next{ top: 0; bottom: 0; right: 25px;}
     .breadcrumb{ padding: 0 !important;}
+    .newsletter .col-lg-7 .d-flex.flex-wrap.justify-content-lg-end.gap-5{ gap: 1rem !important;}
 }   
 
 @media only screen and (max-width: 640px) {
